# SENGENE

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md
DNA/: CMakeLists.txt
DNA/assets/models/Billboard_grass/: BillBoardGrass.fbx
DNA/assets/models/Gigantamax Charizard/: README.txt
DNA/assets/models/Gigantamax Charizard/Gigantamax Charizard/: Charizard.dae
DNA/assets/models/XBot/: XBot_Blended.fbx  XBot_Capoeira_Blended.fbx
DNA/assets/models/barrel/: wine_barrel_01_4k.mtl
DNA/assets/models/crystal_mines/: low-poly-crystal-mines.fbx
DNA/assets/models/cube/: cube.mtl
DNA/assets/models/red_cube/: redcube.mtl
DNA/assets/models/source/Low Poly Grass/: Describtion.txt
DNA/assets/models/source/Low Poly Grass/LowPolyFox_Ma/: LowPoly Grass.ma
DNA/assets/models/source/Low Poly Grass/LowPolyFox_OBJ/: LowPoly Grass.mtl
DNA/assets/scenes/: brother_assets.selfish  chess.selfish
DNA/assets/shaders/: gizmo_instanced_shader.frag  grass_instanced_shader.frag  phong_instanced_shader.frag  phong_instanced_shader.vert
DNA/src/: EditorLayer.cpp  EditorLayer.h  SelfishGenesApp.cpp
DNA/src/Panels/: DebugConsolePanel.cpp  DebugConsolePanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
DNA/src/Scripts/: Board.h  CameraController.h  Food.h  OpenSimplexNoise.cpp  OpenSimplexNoise.h  Unit.cpp  Unit.h
FLAG/: CMakeLists.txt
FLAG/src/: Algorithms.h  Body.h  Collider.cpp  Collider.h  Physics.cpp  Physics.h  Ray.cpp  Ray.h
SGE/: CMakeLists.txt
SGE/src/: sgepch.h
SGE/src/SGE/: SGE.cpp  SGE.h
SGE/src/SGE/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  Logging.cpp  Logging.h  TimeStep.h  Window.h
SGE/src/SGE/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
SGE/src/SGE/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
SGE/src/SGE/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
SGE/src/SGE/Renderer/: Camera.cpp  Camera.h  FrameBuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
SGE/src/SGE/Renderer/GrassRenderer/: GrassRenderer.cpp  GrassRenderer.h
SGE/src/SGE/Renderer/SkinnedMeshRenderer/: AnimatedModel.cpp  AnimatedModel.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h
SGE/src/SGE/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  Systems.h
SGE/src/SGE/Utils/: PlatformUtils.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: deffered_shader.frag  deffered_shader.vert
Sandbox/src/: FeatureTest3D.cpp  FeatureTest3D.h  Sandbox3D.cpp  Sandbox3D.h  SelfishGenesApp.cpp
Sandbox/src/Scripts/: CameraController.h  Unit.h
Sandbox2D/: CMakeLists.txt
Sandbox2D/assets/models/XBot/: Thriller2.fbx  XBot.fbx
Sandbox2D/assets/models/brothers/: Rock_Lowpoly_Matthew.fbx
Sandbox2D/assets/scenes/: bone_weights.selfish  default.selfish  example.selfish  example2.selfish
Sandbox2D/assets/shaders/: basic_shader.frag  basic_shader.vert  deffered_shader.frag  deffered_shader.vert  gizmo_instanced_shader.vert  phong_instanced_shader.frag  phong_instanced_shader.vert  phong_instanced_shader_animated.vert
Sandbox2D/src/: FeatureTest3D.cpp  Sandbox2D.cpp  Sandbox2D.h  SelfishGenesApp.cpp
Sandbox2D/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox2D/src/Scripts/: CameraController.h
